// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-swc > should add antd pluginImport 1`] = `
{
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "<ROOT>/packages/core/tests",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
          /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
        ],
        "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "env": {
                "coreJs": "3.36",
                "mode": "usage",
                "shippedProposals": true,
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                  "useDefineForClassFields": false,
                },
              },
              "sourceMaps": true,
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "resolve": {
          "fullySpecified": false,
        },
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "env": {
                "coreJs": "3.36",
                "mode": "usage",
                "shippedProposals": true,
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                  "useDefineForClassFields": false,
                },
              },
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
      "core-js": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugin-swc > should add browserslist 1`] = `
[
  {
    "entry": {
      "main": [
        "src/index.js",
      ],
    },
    "module": {
      "rules": [
        {
          "include": [
            {
              "and": [
                "<ROOT>/packages/core/tests",
                {
                  "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
                },
              ],
            },
            /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
          ],
          "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
          "type": "javascript/auto",
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "coreJs": "3.36",
                  "mode": "usage",
                  "shippedProposals": true,
                  "targets": [
                    "chrome 98",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
        {
          "mimetype": {
            "or": [
              "text/javascript",
              "application/javascript",
            ],
          },
          "resolve": {
            "fullySpecified": false,
          },
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "coreJs": "3.36",
                  "mode": "usage",
                  "shippedProposals": true,
                  "targets": [
                    "chrome 98",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
      ],
    },
    "resolve": {
      "alias": {
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
        "core-js": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
      },
    },
  },
]
`;

exports[`plugin-swc > should add browserslist 2`] = `
[
  {
    "entry": {
      "main": [
        "src/index.js",
      ],
    },
    "module": {
      "rules": [
        {
          "include": [
            {
              "and": [
                "<ROOT>/packages/core/tests",
                {
                  "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
                },
              ],
            },
            /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
          ],
          "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
          "type": "javascript/auto",
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "coreJs": "3.36",
                  "mode": "usage",
                  "shippedProposals": true,
                  "targets": [
                    "chrome 98",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
        {
          "mimetype": {
            "or": [
              "text/javascript",
              "application/javascript",
            ],
          },
          "resolve": {
            "fullySpecified": false,
          },
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "coreJs": "3.36",
                  "mode": "usage",
                  "shippedProposals": true,
                  "targets": [
                    "chrome 98",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
      ],
    },
    "resolve": {
      "alias": {
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
        "core-js": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
      },
    },
  },
]
`;

exports[`plugin-swc > should add pluginImport 1`] = `
[
  {
    "entry": {
      "main": [
        "src/index.js",
      ],
    },
    "module": {
      "rules": [
        {
          "include": [
            {
              "and": [
                "<ROOT>/packages/core/tests",
                {
                  "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
                },
              ],
            },
            /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
          ],
          "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
          "type": "javascript/auto",
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "coreJs": "3.36",
                  "mode": "usage",
                  "shippedProposals": true,
                  "targets": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "rspackExperiments": {
                  "import": [
                    {
                      "libraryName": "foo",
                    },
                  ],
                },
                "sourceMaps": true,
              },
            },
          ],
        },
        {
          "mimetype": {
            "or": [
              "text/javascript",
              "application/javascript",
            ],
          },
          "resolve": {
            "fullySpecified": false,
          },
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "coreJs": "3.36",
                  "mode": "usage",
                  "shippedProposals": true,
                  "targets": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "rspackExperiments": {
                  "import": [
                    {
                      "libraryName": "foo",
                    },
                  ],
                },
                "sourceMaps": true,
              },
            },
          ],
        },
      ],
    },
    "resolve": {
      "alias": {
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
        "core-js": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
      },
    },
  },
]
`;

exports[`plugin-swc > should allow to use \`tools.swc\` to be function type 1`] = `
[
  {
    "include": [
      {
        "and": [
          "<ROOT>/packages/core/tests",
          {
            "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        ],
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "jsc": {
            "externalHelpers": false,
          },
        },
      },
    ],
  },
  {
    "mimetype": {
      "or": [
        "text/javascript",
        "application/javascript",
      ],
    },
    "resolve": {
      "fullySpecified": false,
    },
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "jsc": {
            "externalHelpers": false,
          },
        },
      },
    ],
  },
]
`;

exports[`plugin-swc > should allow to use \`tools.swc\` to configure swc-loader options 1`] = `
[
  {
    "include": [
      {
        "and": [
          "<ROOT>/packages/core/tests",
          {
            "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        ],
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "env": {
            "coreJs": "3.36",
            "mode": "usage",
            "shippedProposals": true,
            "targets": [
              "chrome >= 87",
              "edge >= 88",
              "firefox >= 78",
              "safari >= 14",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "externalHelpers": false,
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "preserveAllComments": true,
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "useDefineForClassFields": false,
            },
          },
          "sourceMaps": true,
        },
      },
    ],
  },
  {
    "mimetype": {
      "or": [
        "text/javascript",
        "application/javascript",
      ],
    },
    "resolve": {
      "fullySpecified": false,
    },
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "env": {
            "coreJs": "3.36",
            "mode": "usage",
            "shippedProposals": true,
            "targets": [
              "chrome >= 87",
              "edge >= 88",
              "firefox >= 78",
              "safari >= 14",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "externalHelpers": false,
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "preserveAllComments": true,
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "useDefineForClassFields": false,
            },
          },
          "sourceMaps": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-swc > should disable all pluginImport 1`] = `
{
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "<ROOT>/packages/core/tests",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
          /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
        ],
        "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "env": {
                "coreJs": "3.36",
                "mode": "usage",
                "shippedProposals": true,
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                  "useDefineForClassFields": false,
                },
              },
              "sourceMaps": true,
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "resolve": {
          "fullySpecified": false,
        },
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "env": {
                "coreJs": "3.36",
                "mode": "usage",
                "shippedProposals": true,
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                  "useDefineForClassFields": false,
                },
              },
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
      "core-js": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugin-swc > should disable preset_env in target other than web 1`] = `
[
  {
    "entry": {
      "main": [
        "src/index.js",
      ],
    },
    "module": {
      "rules": [
        {
          "include": [
            {
              "and": [
                "<ROOT>/packages/core/tests",
                {
                  "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
                },
              ],
            },
            /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
          ],
          "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
          "type": "javascript/auto",
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "targets": [
                    "node >= 16",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
        {
          "mimetype": {
            "or": [
              "text/javascript",
              "application/javascript",
            ],
          },
          "resolve": {
            "fullySpecified": false,
          },
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "targets": [
                    "node >= 16",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
      ],
    },
    "resolve": {
      "alias": {
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
      },
    },
  },
]
`;

exports[`plugin-swc > should disable preset_env mode 1`] = `
[
  {
    "entry": {
      "main": [
        "src/index.js",
      ],
    },
    "module": {
      "rules": [
        {
          "include": [
            {
              "and": [
                "<ROOT>/packages/core/tests",
                {
                  "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
                },
              ],
            },
            /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
          ],
          "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
          "type": "javascript/auto",
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "mode": undefined,
                  "targets": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
        {
          "mimetype": {
            "or": [
              "text/javascript",
              "application/javascript",
            ],
          },
          "resolve": {
            "fullySpecified": false,
          },
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "mode": undefined,
                  "targets": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
      ],
    },
    "resolve": {
      "alias": {
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
      },
    },
  },
]
`;

exports[`plugin-swc > should enable entry mode preset_env 1`] = `
[
  {
    "entry": {
      "main": [
        "/datatext/javascript,import \\"core-js\\";",
        "src/index.js",
      ],
    },
    "module": {
      "rules": [
        {
          "include": [
            {
              "and": [
                "<ROOT>/packages/core/tests",
                {
                  "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
                },
              ],
            },
            /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
          ],
          "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
          "type": "javascript/auto",
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "coreJs": "3.36",
                  "mode": "entry",
                  "targets": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
        {
          "mimetype": {
            "or": [
              "text/javascript",
              "application/javascript",
            ],
          },
          "resolve": {
            "fullySpecified": false,
          },
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "coreJs": "3.36",
                  "mode": "entry",
                  "targets": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
      ],
    },
    "resolve": {
      "alias": {
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
        "core-js": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
      },
    },
  },
]
`;

exports[`plugin-swc > should enable usage mode preset_env 1`] = `
[
  {
    "entry": {
      "main": [
        "src/index.js",
      ],
    },
    "module": {
      "rules": [
        {
          "include": [
            {
              "and": [
                "<ROOT>/packages/core/tests",
                {
                  "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
                },
              ],
            },
            /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
          ],
          "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
          "type": "javascript/auto",
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "coreJs": "3.36",
                  "mode": "usage",
                  "shippedProposals": true,
                  "targets": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
        {
          "mimetype": {
            "or": [
              "text/javascript",
              "application/javascript",
            ],
          },
          "resolve": {
            "fullySpecified": false,
          },
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "coreJs": "3.36",
                  "mode": "usage",
                  "shippedProposals": true,
                  "targets": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
      ],
    },
    "resolve": {
      "alias": {
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
        "core-js": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
      },
    },
  },
]
`;

exports[`plugin-swc > should has correct core-js 1`] = `
[
  {
    "entry": {
      "main": [
        "/datatext/javascript,import \\"core-js\\";",
        "src/index.js",
      ],
    },
    "module": {
      "rules": [
        {
          "include": [
            {
              "and": [
                "<ROOT>/packages/core/tests",
                {
                  "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
                },
              ],
            },
            /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
          ],
          "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
          "type": "javascript/auto",
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "coreJs": "3.36",
                  "mode": "entry",
                  "targets": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
        {
          "mimetype": {
            "or": [
              "text/javascript",
              "application/javascript",
            ],
          },
          "resolve": {
            "fullySpecified": false,
          },
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "coreJs": "3.36",
                  "mode": "entry",
                  "targets": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
      ],
    },
    "resolve": {
      "alias": {
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
        "core-js": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
      },
    },
  },
]
`;

exports[`plugin-swc > should has correct core-js 2`] = `
[
  {
    "entry": {
      "main": [
        "src/index.js",
      ],
    },
    "module": {
      "rules": [
        {
          "include": [
            {
              "and": [
                "<ROOT>/packages/core/tests",
                {
                  "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
                },
              ],
            },
            /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
          ],
          "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
          "type": "javascript/auto",
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "targets": [
                    "node >= 16",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
        {
          "mimetype": {
            "or": [
              "text/javascript",
              "application/javascript",
            ],
          },
          "resolve": {
            "fullySpecified": false,
          },
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "targets": [
                    "node >= 16",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
      ],
    },
    "resolve": {
      "alias": {
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
      },
    },
  },
]
`;

exports[`plugin-swc > should'n override browserslist when target platform is not web 1`] = `
[
  {
    "entry": {
      "main": [
        "src/index.js",
      ],
    },
    "module": {
      "rules": [
        {
          "include": [
            {
              "and": [
                "<ROOT>/packages/core/tests",
                {
                  "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
                },
              ],
            },
            /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
          ],
          "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
          "type": "javascript/auto",
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "coreJs": "3.36",
                  "mode": "usage",
                  "shippedProposals": true,
                  "targets": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
        {
          "mimetype": {
            "or": [
              "text/javascript",
              "application/javascript",
            ],
          },
          "resolve": {
            "fullySpecified": false,
          },
          "use": [
            {
              "loader": "builtin:swc-loader",
              "options": {
                "env": {
                  "coreJs": "3.36",
                  "mode": "usage",
                  "shippedProposals": true,
                  "targets": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "isModule": "unknown",
                "jsc": {
                  "externalHelpers": true,
                  "parser": {
                    "decorators": true,
                    "syntax": "typescript",
                    "tsx": true,
                  },
                  "preserveAllComments": true,
                  "transform": {
                    "decoratorMetadata": true,
                    "legacyDecorator": true,
                    "useDefineForClassFields": false,
                  },
                },
                "sourceMaps": true,
              },
            },
          ],
        },
      ],
    },
    "resolve": {
      "alias": {
        "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
        "core-js": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
      },
    },
  },
]
`;
